fix mobile navbar too wide and slideability issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,13 +7,24 @@
 nav a {
   color: black;
 }
-body {
+html, body, .body-wrap {
   overflow-x: hidden;
   background-color: white;
   font-family: 'Roboto', sans-serif;
+  max-width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+.body-wrap {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 h1 {
   font-family: 'Roboto Slab', serif;
+}
+nav, nav * {
+    max-width: 100%;
 }
 #navbar-main, #navbar-main img {
   transition: .05s all;
@@ -356,8 +367,10 @@ figure, figure img, figcaption{
   text-align: center;
 }
 @media only screen and (max-width: 768px){
-  #navbar-main .container {
-
+  .navbar {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    max-width: 100%;
   }
   #navbar-main a img {
     height: 50px;
@@ -418,7 +431,7 @@ figure, figure img, figcaption{
     bottom: 25px;
     right: 25px;
   }
-  #section-2 {
+    #section-2 {
     margin-top: 12px;
   }
   #section-2 header .container {
